--- a/Shuffle/Innofactor.Crm.Shuffle.csproj
+++ b/Shuffle/Innofactor.Crm.Shuffle.csproj
@@ -116,37 +116,59 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Const.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\ShuffleDefinition.cs">
-      <DependentUpon>ShuffleDefinition.xsd</DependentUpon>
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\Const.cs">
+      <Link>Const.cs</Link>
     </Compile>
-    <Compile Include="ShuffleCounter.cs" />
-    <Compile Include="ShuffleDataExport.cs" />
-    <Compile Include="ShuffleDataImport.cs" />
-    <Compile Include="ShuffleEventArgs.cs" />
-    <Compile Include="ShuffleHelper.cs" />
-    <Compile Include="Shuffler.cs" />
-    <Compile Include="ShuffleSolutionExport.cs" />
-    <Compile Include="ShuffleSolutionImport.cs" />
-    <Compile Include="Types.cs" />
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\Resources\ShuffleDefinition.cs">
+      <Link>Resources\ShuffleDefinition.cs</Link>
+    </Compile>
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\ShuffleCounter.cs">
+      <Link>ShuffleCounter.cs</Link>
+    </Compile>
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\ShuffleDataExport.cs">
+      <Link>ShuffleDataExport.cs</Link>
+    </Compile>
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\ShuffleDataImport.cs">
+      <Link>ShuffleDataImport.cs</Link>
+    </Compile>
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\ShuffleEventArgs.cs">
+      <Link>ShuffleEventArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\ShuffleHelper.cs">
+      <Link>ShuffleHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\Shuffler.cs">
+      <Link>Shuffler.cs</Link>
+    </Compile>
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\ShuffleSolutionExport.cs">
+      <Link>ShuffleSolutionExport.cs</Link>
+    </Compile>
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\ShuffleSolutionImport.cs">
+      <Link>ShuffleSolutionImport.cs</Link>
+    </Compile>
+    <Compile Include="..\shared\Innofactor.Crm.Shuffle\Types.cs">
+      <Link>Types.cs</Link>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\shared\Innofactor.Crm.Shuffle\Resources\parameterxml.xsd">
+      <Link>Resources\parameterxml.xsd</Link>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="..\shared\Innofactor.Crm.Shuffle\Resources\QueryExpression.xsd">
+      <Link>Resources\QueryExpression.xsd</Link>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="..\shared\Innofactor.Crm.Shuffle\Resources\ShuffleDefinition.xsd">
+      <Link>Resources\ShuffleDefinition.xsd</Link>
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Innofactor.Crm.Shuffle.nuspec" />
     <None Include="Cinteros.CRM.snk" />
-    <EmbeddedResource Include="Resources\QueryExpression.xsd">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources\ShuffleDefinition.xsd">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Resources\parameterxml.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Resources\XSD ShuffleDefinition.cs.cmd" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="..\modules\Xrm.Utils\Innofactor.Xrm.Utils.Common\Innofactor.Xrm.Utils.Common.projitems" Label="Shared" />
