--- a/XTB/packages.config
+++ b/XTB/packages.config
@@ -4,15 +4,17 @@
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net462" />
   <package id="ILMerge" version="3.0.29" targetFramework="net472" />
   <package id="Innofactor.Xrm.DevUtils.Common" version="9.0.1804.11" targetFramework="net462" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net472" />
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.21" targetFramework="net472" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.21" targetFramework="net472" />
   <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.21" targetFramework="net472" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.21" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.0.21" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.26" targetFramework="net472" />
+  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.0.26" targetFramework="net472" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.4" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net472" />
   <package id="Microsoft.Web.Xdt" version="3.0.0" targetFramework="net472" />
-  <package id="MscrmTools.Xrm.Connection" version="1.2019.11.27" targetFramework="net462" />
+  <package id="MscrmTools.Xrm.Connection" version="1.2020.2.30" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net452" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
@@ -22,5 +24,5 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
-  <package id="XrmToolBoxPackage" version="1.2019.11.35" targetFramework="net462" />
+  <package id="XrmToolBoxPackage" version="1.2020.2.37" targetFramework="net472" />
 </packages>
